src/App.css
.App {
  word-wrap: normal;
  min-width: 100%;
  min-height: 100%;
  background-color: #ffffff;
  font-family: Raleway;
  overflow: hidden;
}

.content {
  max-width: 2400px;
  display: block;
  margin: auto;
}

.wave {
  animation-name: wave-animation;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  transform-origin: 70% 70%;
  display: inline-block;
}

@keyframes wave-animation {
  0% {
    transform: rotate(0deg);
  }
  10% {
    transform: rotate(14deg);
  }
  20% {
    transform: rotate(-8deg);
  }
  30% {
    transform: rotate(14deg);
  }
  40% {
    transform: rotate(-4deg);
  }
  50% {
    transform: rotate(10deg);
  }
  60% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

.point {
  animation-name: point-animation;
  animation-duration: 4s;
  animation-iteration-count: infinite;
  transform-origin: 70% 70%;
  display: inline-block;
}

@keyframes point-animation {
  0% {
    transform: translateY(0px);
  }
  10% {
    transform: translateY(4px);
  }
  20% {
    transform: translateY(-3px);
  }
  30% {
    transform: translateY(4px);
  }
  40% {
    transform: translateY(-3px);
  }
  50% {
    transform: translateY(4px);
  }
  60% {
    transform: translateY(-3px);
  }
  100% {
    transform: translateY(0px);
  }
}

iframe {
  display: block;
  margin: auto;
  margin-bottom: 2rem;
}

h1 {
  letter-spacing: 0.1rem;
  word-wrap: normal;
  font-weight: 500;
  color: #465055;
}

h2 {
  letter-spacing: 0.1rem;
  font-weight: 500;
  color: #465055;
}

h3 {
  letter-spacing: 0.1rem;
  font-weight: 500;
  color: #363d41;
}

p {
  letter-spacing: 0.05rem;
  font-weight: 400;
  color: #363d41;
}

ul {
  letter-spacing: 0.05rem;
  font-weight: 400;
  color: #363d41;
  list-style-type: circle;
}

li {
  margin-top: 0.75rem;
}

img {
  box-shadow: 0px 3px 25px rgba(0, 0, 0, 0.2);
}

a {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}

button {
  background-color: rgba(0, 0, 0, 0);
  cursor: pointer;
  transition: 0.3s ease;
  outline: none;
  color: #4d575c;
  border: 1px solid #dedede;
  display: inline-flex;
  text-align: center;
  margin: 1rem;
  font-size: 1.5rem;
  padding: 0.5rem;
  border-radius: 5%;
}

button:hover {
  transform: translateY(-3px);
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.4);
}

button:active {
  transform: translateY(2px);
}

.btn-link:hover {
  border: 1px solid #dedede;
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
}

.twitter-btn:hover {
  border: 1px solid rgba(0, 0, 0, 0);
  background-color: #1da1f2;
  color: #ffffff;
}

.linkedin-btn:hover {
  border: 1px solid rgba(0, 0, 0, 0);
  background-color: #2867b2;
  color: #ffffff;
}

.github-btn:hover {
  border: 1px solid rgba(0, 0, 0, 0);
  background-color: #211f1f;
  color: #ffffff;
}

.resume-btn:hover {
  border: 1px solid rgba(0, 0, 0, 0);
  background-color: #ff4a60;
  color: #ffffff;
}

.btn-container {
  display: inline-flex;
  flex-wrap: wrap;
  text-align: center;
}

.btn-link {
  border: 1px solid rgba(0, 0, 0, 0);
  border-radius: 0px;
  margin: 1.5rem;
  padding-left: 1em;
  padding-right: 1em;
  font-family: Raleway;
  text-transform: uppercase;
  font-weight: 700;
}

.logo {
  box-shadow: none;
  display: block;
  margin: auto;
  width: 70%;
  max-width: 700px;
  min-width: 240px;
  height: auto;
}

.homepage {
  text-align: center;
  align-items: center;
  justify-content: center;
  display: grid;
  padding: 4em;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.space {
  height: 100rem;
}

.grid-btn {
  margin-top: 4em;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.grid {
  margin-top: 4em;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.about {
  display: block;
  margin: auto;
  width: 95%;
  min-height: 100vh;
  text-align: center;
}

.space {
  height: 4em;
}

.margin {
  height: 1em;
}

/* text sizes for ipad screens or larger */
@media only screen and (min-width: 1024px) {

  .homepage {
    margin-top: 12rem;
  }

  h1 {
    font-size: 3rem;
    margin-bottom: -1rem;
  }

  h2 {
    margin-top: 1rem;
    font-size: 2.5rem;
    margin-bottom: -1rem;
  }

  h3 {
    font-size: 1.75rem;
  }

  p {
    font-size: 1.75rem;
    text-align: justify;
    margin: 0rem 19rem 0rem 19rem
  }

  ul {
    font-size: 1.6rem;
  }

  iframe {
    width: 300px;
    height: 380px;
  }
}

/* text sizes for mobile devices smaller than ipads */
@media only screen and (max-width: 1023px) {

  h1 {
    font-size: 2rem;
    margin-bottom: -1rem;
  }

  h2 {
    margin-top: 1rem;
    font-size: 1.75rem;
    margin-bottom: -1rem;
  }

  h3 {
    font-size: 1.6rem;
  }

  p {
    font-size: 1.5rem;
    text-align: left;
    margin: 0rem 1rem 0rem 1rem
  }

  ul {
    font-size: 1.4rem;
  }

  iframe {
    width: 240px;
    height: 320px;
  }
}

